--- a/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -6,4 +6,11 @@
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="Vehicles.db" />
+      <Content Include="Vehicles.db">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
